# cetk

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  compilereqs  flatpak_install.sh  manage.py  profile-update9pointsourceact-after-montenegro-2  profile-update9pointsourceact-after-montenegro-4  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  windows_find_gdal.py
.github/workflows/: build_wheels.yml  python-publish.yml
src/cetk/: __init__.py  db.py  logging.py  settings.py
src/cetk/edb/: apps.py
src/cetk/tools/: cetk_command.py  utils.py
src/etk/: __init__.py  db.py  logging.py  settings.py  utils.py
src/etk/edb/: apps.py  cache.py  const.py  copy.py  exporters.py  importers.py  ltreefield.py  models.py  signals.py  traffic.py  units.py
src/etk/edb/fixtures/: edb-ref.json
src/etk/edb/importers/: __init__.py  activity_import.py  codeset_import.py  eea_emfac_import.py  gridsource_import.py  roadsource_import.py  rwc_import.py  source_import.py  timevar_import.py  utils.py  validation.py
src/etk/edb/migrations/: 0001_initial.py  (+17 more)
src/etk/emissions/: aggregate_emissions.sql  calc.py  filters.py  queries.py  roadsource_emissions.sql  used_substances.sql  views.py
src/etk/tools/: __init__.py  editor.py  etk_command.py  manage.py  utils.py
tests/: conftest.py  test_db.py
tests/edb/: test_common_models.py  test_fleets.py  test_gridsource_models.py  test_importers.py  test_ltreefield.py  test_models.py  test_rasterize.py  test_road_classes.py  test_road_importers.py  test_road_models.py
tests/edb/data/: .~lock.areasourceactivities.xlsx#  .~lock.areasources.xlsx#  .~lock.pointsourceactivities.xlsx#  .~lock.pointsources.xlsx#  EMEPemissionfactors-short.xlsx  TrafficImportFormat.xlsx  all_sources.xlsx  areasource_substance_attributes.gpkg  areasource_substance_attributes_translation.yaml  areasource_substance_attributes_translation_sweden.yaml  areasource_substance_columns.csv  areasource_substance_sweden.csv  areasourceactivities.xlsx  areasources.xlsx  congestion_profiles.yaml  eldstader_backe.gpkg  fleets.xlsx  fleets.yaml  gridsources.xlsx  gridsources_tmp.xlsx  pointsource_codemap.yaml  pointsource_codes.csv  pointsource_codes.yaml  pointsource_large_set.csv  pointsource_substance_attributes.gpkg  pointsource_substance_attributes_translation.yaml  pointsource_substance_columns.csv  pointsource_substance_mappedsubst.csv  pointsource_substance_mappedsubst_translation.yaml  pointsource_substance_mappedunit.csv  pointsource_substance_mappedunit.yaml  pointsource_substance_parameter.gpkg  pointsource_substance_parameter_translation.yaml  pointsource_substance_rows.csv  pointsourceactivities.xlsx  pointsources.csv  pointsources.xlsx  roadclass_settings.xlsx  roadclasses.yaml  roadclasses_1attr.yaml  (+11 more)
tests/emissions/: test_aggregate_emissions.py  test_areasource_emissions.py  test_custom_sqlite_functions.py  test_gridsource_emissions.py  test_pointsource_emissions.py  test_roadsource_emissions.py  test_utils.py
tests/tools/: conftest.py  test_calculate.py  test_create.py  test_exports.py  test_imports.py  test_info.py
tests/tools/data/: inventory.xlsx  validation.xlsx
(+15 files in other folders)
