[metadata]
name = etk
version = attr: etk.__version__
author = Eef van Dongen
author_email = foluftadmin@smhi.se
description = A python library to support clair offline emission inventories
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.smhi.se/foclair/etk
project_urls =
    Bug Tracker = https://git.smhi.se/foclair/etk/-/issues
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
zip_safe = False
install_requires =
    Django ~= 4.2
    numpy
    pandas
    rastafari ~= 0.1.0
    openpyxl

[options.package_data]

[options.packages.find]
where = src

[options.extras_require]
full =

[options.entry_points]
console_scripts =
    eclair = etk.tools.editor:main
    eclairmanage = etk.tools.manage:main

[flake8]
exclude =
    build,
    .direnv,
    src/etk.egg-info,
    .git,
    .pytest_cache,
    .venv,
    __pycache__
extend-ignore = E203
max-line-length = 88
